--- a/src/SpotifyTools.Web/Components/App.razor
+++ b/src/SpotifyTools.Web/Components/App.razor
@@ -9,10 +9,11 @@
     <title>Spotify Tools</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="css/spotify-theme.css" rel="stylesheet" />
-    <link href="css/layout.css" rel="stylesheet" />
-    <link href="css/components.css" rel="stylesheet" />
-    <link href="css/app.css" rel="stylesheet" />
+    <link href="css/spotify-theme.css?v=3" rel="stylesheet" />
+    <link href="css/layout.css?v=3" rel="stylesheet" />
+    <link href="css/components.css?v=3" rel="stylesheet" />
+    <link href="css/modal-fixes.css?v=3" rel="stylesheet" />
+    <link href="css/app.css?v=3" rel="stylesheet" />
     <HeadOutlet @rendermode="RenderMode.InteractiveServer" />
 </head>
 <body>
